@@ -3,6 +3,7 @@ Revision history for Socialtext-Utils
 0.16 - not yet released
   - Added a WikiObject to return a .pre block on a page
   - refactored YAML WikiObject to use PreBlock package
+  - Added a WikiObject for parsing two column tables into a hash
 
 0.15 - Thu Jun 21 15:40:45 PDT 2007
   - fixed typo in .wikeditrc docs
